tests/idris2/perf005/expected
1/2: Building NoRegression (NoRegression.idr)
2/2: Building Lambda (Lambda.idr)
Error: While processing right hand side of term. When unifying:
    Term ?g (TyFunc ?tyA (TyFunc TyNat (TyFunc TyNat (TyFunc TyNat (TyFunc TyNat (TyFunc TyNat (TyFunc TyNat (TyFunc TyNat TyNat))))))))
and:
    Term Empty (TyFunc TyNat (TyFunc TyNat (TyFunc TyNat (TyFunc TyNat (TyFunc TyNat (TyFunc TyNat (TyFunc TyNat TyNat)))))))
Mismatch between: TyFunc TyNat TyNat and TyNat.

Lambda:62:3--88:9
 62 |   Func
 63 |       (Func
 64 |            (Func
 65 |                 (Func
 66 |                      (Func
 67 |                           (Func

1/1: Building Bad1 (Bad1.idr)
Error: Couldn't parse any alternatives:
1: Not the end of a block entry.

Bad1:3:20--3:21
 1 | module Bad1
 2 | 
 3 | data Bad = BadDCon (x : Nat)
                        ^
... (2 others)
1/1: Building Bad2 (Bad2.idr)
Error: Cannot return a named argument.

Bad2:3:13--3:29
 1 | module Bad2
 2 | 
 3 | badReturn : (whatever : Int)
                 ^^^^^^^^^^^^^^^^

1/1: Building Bad3 (Bad3.idr)
Error: Couldn't parse declaration.

Bad3:4:1--4:8
 1 | module Bad3
 2 | 
 3 | badExpr : ()
 4 | badExpr (whatever : ())
     ^^^^^^^

